# wagtail_fedit

./: .GITIGNORE  MANIFEST.in  README.md  doccer.yaml  jest.config.js  package-lock.json  package.json  push-to-github.ps1  pytest.ini  requirements.txt  setup.cfg  tsconfig.json  webpack.config.js
.doccer/templates/: base.tmpl  footer.tmpl  head.tmpl  main.tmpl  navbar.tmpl
.doccer/templates/hooks/: navbar_menu.tmpl  navbar_menu_item.tmpl  navbar_search.tmpl
.github/ISSUE_TEMPLATE/: bug_report.md
.github/static/: main.css
.github/workflows/: build_node.yml  main-wagtail-52.yml  main-wagtail-60.yml  main-wagtail-61.yml  main-wagtail-70.yml  main.yml
coverage/: clover.xml  coverage-final.json  lcov.info
coverage/lcov-report/: index.html  modal.ts.html
docs/: caveats.html  hooks.html  index.html  installation_instructions.html  make_editable.html  permissions.html  settings.html  support.html
docs/adapters/: adapters.html  adapters_js.html  adapters_python.html  index.html
docs_src/: README.md  caveats.md  hooks.md  installation_instructions.md  make_editable.md  permissions.md  settings.md  support.md
docs_src/adapters/: adapters.md  adapters_js.md  adapters_python.md  readme.md
tester/: urls.py  wsgi.py
tester/settings/: base.py  dev.py
tester/templates/: base.html
tests/: simple.md
tests/testapp/testapp/: settings.py  urls.py
wagtail_fedit/: apps.py  errors.py  hooks.py  models.py  registry.py  settings.py  toolbar.py  urls.py  utils.py
wagtail_fedit/adapters/: __init__.py  base.py  block.py  field.py  funcs.py  misc.py  models.py  registry.py
wagtail_fedit/adapters/block/: __init__.py  (+3 more)
wagtail_fedit/block_forms/: __init__.py  field_conversions.py  forms.py  subform_field.py  utils.py
wagtail_fedit/forms/: __init__.py  blocks.py  fields.py
wagtail_fedit/static_src/: global.ts  utils.ts
wagtail_fedit/templatetags/: fedit.py
wagtail_fedit/test/: manage.py  settings.py  simple.md
wagtail_fedit/tests/: test_blocks.py
wagtail_fedit/views/: __init__.py  adapters.py  blocks.py  editable.py  fields.py  mixins.py
wagtail_fedit/wagtail_hooks/: __init__.py  action_menu.py  adapter_hooks.py  adapter_registry.py  adapters.py  editorjs.py  excluded_relations.py  icons.py  log_actions.py  renderers.py  urls.py  userbar.py
(+81 files in other folders)
