[metadata]
name = wagtail_fedit
version = 1.5.0a2
description = Frontend editing for your Wagtail site
long_description = file: README.md
long_description_content_type = text/markdown
author = Nigel
author_email = nigel@goodadvice.it
url = https://github.com/Nigel2392/wagtail_fedit
license = GPL-2.0-only
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 4.2
    Framework :: Wagtail
    Framework :: Wagtail :: 5
    Framework :: Wagtail :: 6
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:
python_requires = >=3.8
install_requires =
    Django >= 4.2
    Wagtail >= 5.2
